--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,27 @@
 {
     "require": {
-		"php": ">=5.5.9",
-        "silex/silex": "~2.0",
-        "symfony/browser-kit": "~2.3",
-        "symfony/console": "~2.3",
-        "symfony/config": "~2.3",
-        "symfony/css-selector": "~2.3",
-        "symfony/dom-crawler": "~2.3",
-        "symfony/filesystem": "~2.3",
-        "symfony/finder": "~2.3",
-        "symfony/form": "~2.3",
-        "symfony/locale": "~2.3",
-        "symfony/process": "~2.3",
-        "symfony/security": "~2.3",
-        "symfony/serializer": "~2.3",
-        "symfony/translation": "~2.3",
-        "symfony/validator": "~2.3",
-        "symfony/monolog-bridge": "~2.3",
-        "symfony/twig-bridge": "~2.3",
-		"symfony/monolog-bridge": "~2.8|^3.0",
-        "doctrine/dbal": ">=2.2.0,<2.4.0-dev",
-        "swiftmailer/swiftmailer": "5.*",
-        "firebase/php-jwt": "~1.0",
-		"jdesrosiers/silex-cors-provider": "~0.1"
-    }
+        "php": ">=5.5.9",
+	"silex/silex": "~2.0",
+	"silex/web-profiler": "~2.0",
+	"symfony/asset": "~2.8|^3.0",
+	"symfony/browser-kit": "~2.8|^3.0",
+	"symfony/class-loader": "~2.8|^3.0",
+	"symfony/config": "~2.8|^3.0",
+	"symfony/console": "~2.8|^3.0",
+	"symfony/css-selector": "~2.8|^3.0",
+	"symfony/debug": "~2.8|^3.0",
+	"symfony/finder": "~2.8|^3.0",
+	"symfony/form": "~2.8|^3.0",
+	"symfony/monolog-bridge": "~2.8|^3.0",
+	"symfony/process": "~2.8|^3.0",
+	"symfony/security": "~2.8|^3.0",
+	"symfony/translation": "~2.8|^3.0",
+	"symfony/twig-bridge": "~2.8|^3.0",
+	"symfony/validator": "~2.8|^3.0",
+	"firebase/php-jwt": "~1.0",
+        "jdesrosiers/silex-cors-provider": "~0.1"
+    },
+    "autoload": {
+        "psr-0": { "": "src/" }
+    }    
 }
