--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 	"symfony/twig-bridge": "~2.8|^3.0",
 	"symfony/validator": "~2.8|^3.0",
 	"firebase/php-jwt": "~1.0",
-        "jdesrosiers/silex-cors-provider": "~0.1"
+        "jdesrosiers/silex-cors-provider": "~0.1",
+        "pimple/pimple": "~3.0"
     },
     "autoload": {
         "psr-0": { "": "src/" }
